--- a/example-setup/config.toml
+++ b/example-setup/config.toml
@@ -2,9 +2,9 @@
 # all relative paths are relative to this file
 
 index = "index.html" # the index file
-addrs = ["localhost:8000", "localhost:8008"] # the addresses to bind to (default is "127.0.0.1:8000") - the second one is chosen if the first one fails etc
-#addrs = "localhost:8000" # a single address also works
+addr = "localhost:8000" # the address to bind to
+failsafe_addrs = ["localhost:8001"] # the addresses to bind to if the first one fails (optional)
 
-[get_routes] # routes for files accessible via GET request
+[get_routes] # routes for files accessible via GET request (optional)
 "style.css" = "style.css" # file with inferred type (which is currently very limited)
 "favicon.ico" = { type = "image/png", path = "favicon.png" } # file with explicit type
