Use UTF8 paths only
Other paths can't be specified in TOML anyway,
so this shouldn't really change anything.
The one thing that does change is
that the whole path containing the config file now has to be UTF8 too.
I'd like to come up with a better solution for that in the future.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ http2 = ["axum/http2"]
 
 [dependencies]
 axum = { version = "0.7", default-features = false, features = ["tokio"] }
+camino = { version = "1", features = ["serde1"] }
 mime = "0.3"
 serde = { version = "1.0.145", features = ["derive"] }
 tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "net"] }
