--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "simple-http-server"
-version = "0.3.0-alpha.1"
+version = "0.3.0"
 authors = ["T0mstone <realt0mstone@gmail.com>"]
 edition = "2021"
 rust-version = "1.70"
