--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,11 @@
 [package]
 name = "simple-http-server"
-version = "0.3.1"
-authors = ["T0mstone <realt0mstone@gmail.com>"]
+version = "0.3.2"
 edition = "2021"
 rust-version = "1.75.0"
+
+authors = ["T0mstone <realt0mstone@gmail.com>"]
+license = "MIT-0"
 
 [features]
 default = ["http1", "http2"]
@@ -13,8 +15,8 @@ http2 = ["axum/http2"]
 
 [dependencies]
 axum = { version = "0.8", default-features = false, features = ["tokio"] }
-camino = { version = "1", features = ["serde1"] }
+camino = { version = "1.0.5", features = ["serde1"] }
 mime = "0.3"
-serde = { version = "1.0.145", features = ["derive"] }
+serde = { version = "1", features = ["derive"] }
 tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "net"] }
 toml = "0.8"
