--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,7 @@
 [package]
 name = "simple-http-server"
+# note: this crate is pretty much finished,
+# but it won't be `1.x` until all its dependencies are.
 version = "0.3.3-dev"
 edition = "2021"
 rust-version = "1.75.0"
